--- a/templates/template_event_4/index.html
+++ b/templates/template_event_4/index.html
@@ -126,7 +126,9 @@
                 </div>
                 <div class="bottom-arrow">
                     <div data-aos="fade-down" data-aos-offset="-900">
-                        <img src="images/arrow-down-04.png"/>
+                        <a href="#about">
+                            <img src="images/arrow-down-04.png"/>
+                        </a>
                     </div>
                 </div>
             </div>
