--- a/templates/template_event_7/index.html
+++ b/templates/template_event_7/index.html
@@ -202,7 +202,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div data-aos="fade-right" class="form-rsvp">
+                        <div data-aos="fade-up" class="form-rsvp">
                             <h3>
                                 We can’t wait to 
                                 celebrate with you!
@@ -243,39 +243,40 @@
                                     <div class="col-lg-12">
                                         <input type="submit" class="button-form" data-toggle="modal" data-target="#ebrochure" value="SUBMIT" />
                                         <a class="button-download fr" target="_blank" href="invitation.pdf">Download Invitation</a>
-                                        <div class="modal fade" id="ebrochure">
-                                            <div class="modal-dialog modal-dialog-centered">
-                                                <div class="modal-content">
-                                                    <div class="container-fluid">
-                                                        <div class="row">
-                                                            <div class="col-lg-12 pl-lg-0 pr-lg-0">
-                                                                <a class="close" data-dismiss="modal">
-                                                                    <img class="img-fluid" src="images/close.png" />
-                                                                </a>
-                                                                <img class="img-fluid popup-bg w-lg-100p bs d-none d-lg-block" src="images/background-04.png" />
-                                                                <img class="img-fluid popup-bg w-lg-100p bs d-block d-lg-none" src="images/background-05.png" />
-                                                                <div class="boxc">
-                                                                    <div class="wraptitle">
-                                                                        <div class="title pt-lg-5p">Thank</div>
-                                                                        <div class="title text-right pb-m-50 pb-lg-70 pr-lg-5p">you!</div>
-                                                                    </div>
-                                                                    <div class="subtitle">FOR LETTING US KNOW</div>
-                                                                    <div class="line-yellow"></div>
-                                                                    <p class="mb-lg-0">
-                                                                        We will surely take notes of your attendance and drop you an email for further notice.
-                                                                    </p>
-                                                                </div>
-                                                                <img class="img-fluid ornament1" src="images/ornament-12.png" />
-                                                                <img class="img-fluid ornament2" src="images/ornament-13.png" />
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        
                                     </div>
                                 </div>
                             </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade" id="ebrochure">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-lg-12 pl-lg-0 pr-lg-0">
+                                    <a class="close" data-dismiss="modal">
+                                        <img class="img-fluid" src="images/close.png" />
+                                    </a>
+                                    <img class="img-fluid popup-bg w-lg-100p bs d-none d-lg-block" src="images/background-04.png" />
+                                    <img class="img-fluid popup-bg w-lg-100p bs d-block d-lg-none" src="images/background-05.png" />
+                                    <div class="boxc">
+                                        <div class="wraptitle">
+                                            <div class="title pt-lg-5p">Thank</div>
+                                            <div class="title text-right pb-m-50 pb-lg-70 pr-lg-5p">you!</div>
+                                        </div>
+                                        <div class="subtitle">FOR LETTING US KNOW</div>
+                                        <div class="line-yellow"></div>
+                                        <p class="mb-lg-0">
+                                            We will surely take notes of your attendance and drop you an email for further notice.
+                                        </p>
+                                    </div>
+                                    <img class="img-fluid ornament1" src="images/ornament-12.png" />
+                                    <img class="img-fluid ornament2" src="images/ornament-13.png" />
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
