--- a/templates/template_event_8/index.html
+++ b/templates/template_event_8/index.html
@@ -447,7 +447,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12 text-center py-4">
-                        <a href="#" class="text-white border-white px-3 py-2 rounded-button">
+                        <a href="#" class="button-updates text-white border-white px-3 py-2 rounded-button">
                             MORE UPDATES
                         </a>
                     </div>
@@ -515,7 +515,8 @@
                     in the festival.<br>
                 </p>
                 <p class="mt-5">
-                    <a class="bg-blue text-white font-montserrat-semibold px-lg-5 px-5 py-2 rounded-button" href="#">LINEUP</a> <a class="bg-blue text-white font-montserrat-semibold px-lg-5 px-5 py-2 rounded-button ml-lg-5 ml-3" href="#">TICKETS</a>
+                    <a class="button-blue bg-blue text-white font-montserrat-semibold px-lg-5 px-5 py-2 rounded-button" href="#">LINEUP</a>
+                    <a class="button-blue bg-blue text-white font-montserrat-semibold px-lg-5 px-5 py-2 rounded-button ml-lg-5 ml-3" href="#">TICKETS</a>
                 </p>
             </div>
             <div data-aos="fade-up" class="col-lg-7 px-0">
