--- a/templates/template_wedding_10/index.html
+++ b/templates/template_wedding_10/index.html
@@ -449,7 +449,7 @@
                             <img class="img-fluid motif d-none d-lg-block" src="images/motif-08.png" />
                             <img class="img-fluid motif d-block d-lg-none" src="images/mobile-motif-06.png" />
                             <div class="boxc text-left">
-                                <div data-aos="fade-right" data-aos-offset="-4500">
+                                <div data-aos="fade-right" data-aos-offset="-5000">
                                     <h3>Palihotel</h3>
                                     <table>
                                         <tr>
@@ -504,6 +504,7 @@
                             <label for="your-guest">ADDITIONAL GUEST*</label>
                             <input type="number" class="form-control" id="your-guest" name="your-guest" placeholder="Type here" required>
                             <button type="submit" class="button-default" data-toggle="modal" data-target="#ebrochure">SUBMIT</button>
+                            <a href="invitation.pdf" class="button-download">Download Invitation</a>
                             <div class="modal fade" id="ebrochure">
                                 <div class="modal-dialog modal-dialog-centered">
                                     <div class="modal-content">
