--- a/templates/template_wedding_9/index.html
+++ b/templates/template_wedding_9/index.html
@@ -449,7 +449,7 @@
                                                 <input type="submit" class="button-default" data-toggle="modal" data-target="#ebrochure" value="SUBMIT" />
                                                 <img class="img-fluid" src="images/arrow-02.png" />
                                             </div>
-                                            <a class="button-default" href="">DOWNLOAD INVITATION <img class="img-fluid" src="images/form-03.png" /></a>
+                                            <a class="button-default" href="invitation.pdf" target="_blank">DOWNLOAD INVITATION <img class="img-fluid" src="images/form-03.png" /></a>
                                             <div class="button-wrap d-none d-lg-block">
                                                 <input type="submit" class="button-default" data-toggle="modal" data-target="#ebrochure" value="SUBMIT" />
                                                 <img class="img-fluid" src="images/arrow-02.png" />
