--- a/templates/template_wedding_10/style-wedding-10.css
+++ b/templates/template_wedding_10/style-wedding-10.css
@@ -57,8 +57,8 @@
 	}
 	p,a,label,th,td,li, input{
 		font-family: "Avenir Roman";
-		font-size: 30px !important;
-		line-height: 40px !important;
+		font-size: 20px !important;
+		line-height: 31px !important;
 		color: #000000 !important;
 	}
 	.container-fluid{position: relative;}
@@ -85,6 +85,25 @@
 			color: #000 !important;
 			background: #fff;
 			border: 1px solid #fec2b2;
+	}
+	.button-download{
+			margin-top: 5%;
+			padding: 1% 5%;
+			font-family: "Avenir Black";
+			font-size: 14px !important;
+			line-height: 38px !important;
+			letter-spacing: 1.4px;
+			border-radius: 0;
+			color: #000 !important;
+			background: #fff;
+			border: 1px solid #fec2b2;
+			display: block;
+			text-align: center;
+	}
+	.button-download:hover{
+		color: #fff !important;
+		background: #fec2b2;
+		border: 1px solid #fec2b2;
 	}
 	#banner .bg,
 	#gallery .bg,
