--- a/templates/template_birthday_3/index.html
+++ b/templates/template_birthday_3/index.html
@@ -81,8 +81,10 @@
                     <img class="img-fluid motif w-lg-100p d-none d-lg-block" src="images/image-03.png" />
                     <img class="img-fluid motif w-lg-100p d-block d-lg-none" src="images/mobile-image-03.png" />
                     <div class="boxc text-center">
-                        <h2 data-aos="fade-down" class="font-gold ts">Christine’s</h2>
-                        <h2 data-aos="fade-down" class="font-white ts mb-m-25 mb-lg-40">3<sup>rd</sup> Birthday</h2>
+                        <div data-aos="fade-down" >
+                        <h2 class="font-gold ts">Christine’s</h2>
+                        <h2 class="font-white ts mb-m-25 mb-lg-40">3<sup>rd</sup> Birthday</h2>
+                        </div>
                         <div class="line-white w-lg-10p ma-lg mb-m-25 mb-lg-45"></div>
                         <div data-aos="fade-up" data-aos-offset="-70" class="w-m-80p w-lg-25p ma-lg font-white">
                             <p>Please join us in celebration of Christine’s third birthday. It’s a party and you are cordially invited.</p>
