--- a/templates/template_birthday_4/index.html
+++ b/templates/template_birthday_4/index.html
@@ -242,18 +242,18 @@
                             <input type="submit" class="button-form mb-m-10p mb-lg-5p" data-toggle="modal" data-target="#ebrochure" value="Submit" />
                         </form>
                         <div class="modal fade" id="ebrochure">
-                            <div class="modal-dialog modal-dialog-centered modal-lg">
+                            <div class="modal-dialog modal-dialog-centered modal-xl">
                                 <div class="modal-content">
                                     <div class="container-fluid">
                                         <div class="row">
                                             <div class="col-lg-12 text-center pt-m-15p pt-lg-5p pb-lg-10p pl-lg-0 pr-lg-0">
-                                                <img class="img-fluid w-lg-100p motif" src="images/motif-09.png" />
+                                                <!-- <img class="img-fluid w-lg-100p motif" src="images/motif-09.png" /> -->
                                                 <div class="box bs">
                                                     <a class="close button-default" data-dismiss="modal">X</a>
                                                     <h3 class="font-krub-r"><span>see you there</span></h3>
                                                     <h2>At the Party!</h2>
                                                     <div class="font-darkblue">
-                                                        <p>Your presence on my celebration means a lot to me and my family. Cannot wait to see you there!</p>
+                                                        <p>Your presence on my celebration means a lot to me and my family. <br><br>Cannot wait to see you there!</p>
                                                     </div>
                                                 </div>
                                             </div>
