--- a/templates/template_birthday_2/wishlist.html
+++ b/templates/template_birthday_2/wishlist.html
@@ -144,7 +144,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid py-3 footer bg-pink">
+    <div class="container-fluid py-3 footer">
       <div class="row">
         <div class="col-lg-1 offset-lg-3 col-1">
           <p class="text-gray mb-0">
