waiting additional popup and invitation design

--- a/templates/template_birthday_4/index.html
+++ b/templates/template_birthday_4/index.html
@@ -86,24 +86,24 @@
                         <h1 class="mb-m-15p mb-lg-5p">Aaron’s <span>1<sup>st</sup></span> Birthday</h1>
                         <div class="gallery">
                             <div class="box">
-                                <img data-aos="fade-up"  class="img-fluid" src="images/images-02.png" />
-                                <img data-aos="fade-up"  class="img-fluid horizontal" src="images/images-07.png" />
+                                <img data-aos="fade-up"  class="img-fluid" src="images/images-02.png" data-toggle="modal" data-target="#images1" />
+                                <img data-aos="fade-up"  class="img-fluid horizontal" src="images/images-07.png" data-toggle="modal" data-target="#images2"/>
                             </div>
                             <div class="box">
-                                <img data-aos="fade-up" class="img-fluid horizontal" src="images/images-03.png" />
-                                <img data-aos="fade-up" class="img-fluid" src="images/images-08.png" />
+                                <img data-aos="fade-up" class="img-fluid horizontal" src="images/images-03.png" data-toggle="modal" data-target="#images3" />
+                                <img data-aos="fade-up" class="img-fluid" src="images/images-08.png" data-toggle="modal" data-target="#images4" />
                             </div>
                             <div class="box">
-                                <img data-aos="fade-up" class="img-fluid" src="images/images-04.png" />
-                                <img data-aos="fade-up" class="img-fluid horizontal" src="images/images-09.png" />
+                                <img data-aos="fade-up" class="img-fluid" src="images/images-04.png"  data-toggle="modal" data-target="#images5" />
+                                <img data-aos="fade-up" class="img-fluid horizontal" src="images/images-09.png"  data-toggle="modal" data-target="#images6"/>
                             </div>
                             <div class="box">
-                                <img data-aos="fade-up" class="img-fluid horizontal" src="images/images-05.png" />
-                                <img data-aos="fade-up" class="img-fluid" src="images/images-10.png" />
+                                <img data-aos="fade-up" class="img-fluid horizontal" src="images/images-05.png"  data-toggle="modal" data-target="#images7" />
+                                <img data-aos="fade-up" class="img-fluid" src="images/images-10.png"  data-toggle="modal" data-target="#images8" />
                             </div>
                             <div class="box">
-                                <img data-aos="fade-up" class="img-fluid" src="images/images-06.png" />
-                                <img data-aos="fade-up" class="img-fluid horizontal" src="images/images-11.png" />
+                                <img data-aos="fade-up" class="img-fluid" src="images/images-06.png"  data-toggle="modal" data-target="#images9" />
+                                <img data-aos="fade-up" class="img-fluid horizontal" src="images/images-11.png"  data-toggle="modal" data-target="#images10" />
                             </div>
                         </div>
                         <div class="mgallery d-block d-lg-none">
@@ -150,6 +150,70 @@
                 </div>
             </div>
         </section>
+        <div class="modal fade" id="images1" tabindex="1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="row">
+                    <div class="col-lg-12 text-right">
+                        <h2 class="text-white">
+                            &times;
+                        </h2>
+                    </div>
+                </div>
+                <div class="row">  
+                    <div class="col-lg-12">
+                        <img class="img-fluid mx-auto d-block" src="images/images-02.png" alt="">
+                    </div>
+                </div>
+            </div>
+          </div>
+          <div class="modal fade" id="images2" tabindex="1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="row">
+                    <div class="col-lg-12 text-right">
+                        <h2 class="text-white">
+                            &times;
+                        </h2>
+                    </div>
+                </div>
+                <div class="row">  
+                    <div class="col-lg-12">
+                        <img class="img-fluid mx-auto d-block" src="images/images-07.png" alt="">
+                    </div>
+                </div>
+            </div>
+          </div>
+          <div class="modal fade" id="images3" tabindex="1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="row">
+                    <div class="col-lg-12 text-right">
+                        <h2 class="text-white">
+                            &times;
+                        </h2>
+                    </div>
+                </div>
+                <div class="row">  
+                    <div class="col-lg-12">
+                        <img class="img-fluid mx-auto d-block" src="images/images-03.png" alt="">
+                    </div>
+                </div>
+            </div>
+          </div>
+          <div class="modal fade" id="images4" tabindex="1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="row">
+                    <div class="col-lg-12 text-right">
+                        <h2 class="text-white">
+                            &times;
+                        </h2>
+                    </div>
+                </div>
+                <div class="row">  
+                    <div class="col-lg-12">
+                        <img class="img-fluid mx-auto d-block" src="images/images-08.png" alt="">
+                    </div>
+                </div>
+            </div>
+          </div>
         <!-- Section DATE & PLACE -->
         <section id="dateandplace">
             <div class="container-fluid pt-m-45p pb-m-35p pt-lg-10p pb-lg-10p pl-lg-5p pr-lg-5p text-center bg-lightgreen">
