--- a/templates/template_birthday_1_free/index.html
+++ b/templates/template_birthday_1_free/index.html
@@ -20,23 +20,26 @@
 </head>
 <body>
     <div id="homepage">
-        <div class="container-fluid birthday-1-free py-5">
-            <div class="row mx-4">
-                <div class="col-lg-6">
-                    <img class="img-fluid" src="images/content-free-07.jpg" alt="">
+        <div class="container-fluid birthday-1-free py-lg-5">
+            <div class="row mx-lg-4">
+                <div class="col-lg-6 px-0 px-lg-2">
+                    <img class="img-fluid d-none d-lg-block" src="images/content-free-07.jpg" alt="">
+                    <img class="img-fluid d-lg-none" src="images/content-free-mobile-06.jpg" alt="">
                 </div>
                 <div class="col-lg-6 pl-4">
                     <div class="row">
-                        <div class="wrapper-carousel">
-                            <div class="carousel-free owl-theme">
-                                <div class="item">
-                                    <img class="img-fluid" src="images/content-free-carousel-items-08.png" alt="">
-                                </div>
-                                <div class="item">
-                                    <img class="img-fluid" src="images/content-free-carousel-items-09.png" alt="">
-                                </div>
-                                <div class="item">
-                                    <img class="img-fluid" src="images/content-free-carousel-items-10.png" alt="">
+                        <div class="col-lg-12">
+                            <div class="wrapper-carousel">
+                                <div class="carousel-free owl-theme">
+                                    <div class="item">
+                                        <img class="img-fluid" src="images/content-free-carousel-items-08.png" alt="">
+                                    </div>
+                                    <div class="item">
+                                        <img class="img-fluid" src="images/content-free-carousel-items-09.png" alt="">
+                                    </div>
+                                    <div class="item">
+                                        <img class="img-fluid" src="images/content-free-carousel-items-10.png" alt="">
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -78,15 +81,15 @@
                         </div>
                         <div class="col-lg-7">
                             <div class="row">
-                                <div class="col-lg-2">
+                                <div class="col-2">
                                     <a role="button" id="step-decrement" class="btn btn-default" aria-label="remove 1" aria-labelledby="step-decrement label-text">
                                         <i class="fa fa-caret-left font-green"></i>
                                     </a>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-3">
                                     <input class=" text-center" disabled type="number" name="qty" id="spinner" value="1" aria-live="polite" tabindex="-1" aria-labelledby="label-text">
                                 </div>
-                                <div class="col-lg-2">
+                                <div class="col-2">
                                     <a role="button" id="step-increment" class="btn btn-default" aria-label="add 1" aria-labelledby="step-increment label-text">
                                         <i class="fa fa-caret-right font-green"></i>
                                     </a>
@@ -94,7 +97,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mb-lg-0 mb-5">
                         <div class="col-lg-12 py-3 text-right">
                             <a class="submit-birthday" href="#">
                                 SUBMIT
